# panes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/macos/: Info.plist
assets/windows/: Panes.exe.manifest
crates/panes-app/: Cargo.toml  build.rs
crates/panes-app/src/: main.rs
crates/panes-core/: Cargo.toml
crates/panes-core/src/: command.rs  config.rs  geometry.rs  history.rs  layout.rs  lib.rs
crates/panes-macos/: Cargo.toml
crates/panes-macos/src/: accessibility_authorization.rs  coordinates.rs  lib.rs  screen.rs  window.rs
crates/panes-platform/: Cargo.toml
crates/panes-platform/src/: lib.rs
crates/panes-runtime/: Cargo.toml
crates/panes-runtime/src/: config.rs  executor.rs  failure.rs  lib.rs
crates/panes-runtime/tests/: command_flow.rs
crates/panes-windows/: Cargo.toml
crates/panes-windows/src/: coordinates.rs  lib.rs  native.rs
docs/: config.example.toml  macos-validation.md  releasing.md
scripts/: bundle-macos.sh  package-macos.sh  package-windows.ps1
