[package]
name = "panes-macos"
description = "macOS native adapter for panes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
global-hotkey = { version = "0.8.0", default-features = false }
panes-core = { path = "../panes-core" }
panes-platform = { path = "../panes-platform" }
tao = { version = "0.35.3", default-features = false }
tray-icon = { version = "0.24.1", default-features = false }

[lints]
workspace = true
