[package]
name = "panes-macos"
description = "macOS native adapter for panes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
accessibility = "0.2.0"
accessibility-sys = "0.2.0"
core-foundation = "0.10.1"
core-graphics = "0.24.0"
global-hotkey = { version = "0.8.0", default-features = false }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "libc",
    "NSRunningApplication",
    "NSScreen",
    "objc2-core-graphics",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "NSArray",
    "NSGeometry",
    "NSString",
    "objc2-core-foundation",
] }
panes-core = { path = "../panes-core" }
panes-platform = { path = "../panes-platform" }
tao = { version = "0.35.3", default-features = false }
tray-icon = { version = "0.24.1", default-features = false }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
