[package]
name = "panes-platform"
description = "Platform traits for native panes integrations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
panes-core = { path = "../panes-core" }

[lints]
workspace = true
