[package]
name = "panes-runtime"
description = "Shared command execution runtime for panes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
panes-core = { path = "../panes-core" }
panes-platform = { path = "../panes-platform" }

[lints]
workspace = true
