[package]
name = "panes-runtime"
description = "Shared command execution runtime for panes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dirs = "6.0.0"
panes-core = { path = "../panes-core" }
panes-platform = { path = "../panes-platform" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[lints]
workspace = true
